cabal-version: 2.4
name:          calamity-tutorial
version:       0.1.0.0
author:        Morrow
copyright:     MIT

executable calamity-tutorial
  main-is:            Main.hs
  build-depends:
    , base             ^>=4.14.1.0
    , calamity         >=0.1.30   && <0.1.31
    , data-default
    , data-flags
    , di
    , di-polysemy
    , generic-lens
    , lens
    , polysemy
    , polysemy-plugin
    , text
    , text-show

  ghc-options:        -fplugin=Polysemy.Plugin
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    OverloadedLabels
    OverloadedStrings
    TypeApplications
