cabal-version: 2.4
name:          calamity-tutorial
version:       0.1.0.0
author:        Morrow
copyright:     MIT

executable calamity-tutorial
  main-is:            Main.hs

  -- Use a version of `base` corresponding with GHC 9.2.x
  build-depends:
    , base             ^>=4.16
    , calamity         ^>=0.7
    , data-default
    , data-flags
    , di
    , di-polysemy
    , optics
    , polysemy
    , polysemy-plugin
    , text
    , text-show

  ghc-options:        -fplugin=Polysemy.Plugin
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    OverloadedLabels
    OverloadedStrings
    TypeApplications
